docs(#2869): fat-jar option in the user docs, release-lane + dev-channel in RELEASING, kit NOTE